# AgentDesk

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  runner.py  schemas.py  static_files.py
backend/app/api/: attachments.py  deps.py  git.py  projects.py  sessions.py  system.py
backend/app/services/: attachment_service.py  codex_service.py  event_service.py  git_service.py  prompt_service.py  terminal_service.py
backend/app/utils/: paths.py  slug.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AttachmentDropzone.tsx  DiffViewer.tsx  FileList.tsx  Layout.tsx  LogViewer.tsx  NewProjectDialog.tsx  NewSessionDialog.tsx  ProjectList.tsx  SessionActions.tsx  SessionList.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/pages/: DashboardPage.tsx  ProjectPage.tsx  SessionPage.tsx
scripts/: build-linux.sh  dev.sh  install.sh
